fix header alignment

--- a/styles.css
+++ b/styles.css
@@ -83,6 +83,7 @@ a {
     display: grid;
     grid-template-columns: 2fr 1fr;
     justify-items: end;
+    align-items: center;
 }
 
 .header-container > div > :first-child {
@@ -147,7 +148,7 @@ button {
 
 .content-wrapper {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(375px, 1fr));
     gap: 1.25rem;
 }
 
@@ -160,7 +161,7 @@ button {
     border-radius: 15px;
     box-shadow: 1px 1px 2px gray;
     padding: 1.5rem;
-    height: 300px;
+    height: 275px;
 }
 
 .main-container h1 {
